--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -171,3 +171,14 @@ a {
 .v-note-wrapper .v-note-panel {
     min-height: 500px;
 }
+
+
+[class^="el-icon-fa"], [class*=" el-icon-fa"] {
+    display: inline-block;
+    font: normal normal normal 14px/1 FontAwesome !important;
+    font-size: inherit;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  
